"Texture Paint" Workspace causes Traceback Error Popup #58902

Closed
opened 2018-12-07 00:32:17 +01:00 by Sam Walker · 8 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GTX 1070

Blender Version
Broken: 2.80-beta, 74db65e542
Worked: 2.80-beta, 925380050d

Short description of error
Upon changing to the "Texture Paint" Workspace, the following traceback error message pops-up.

Traceback (most recent call last):
  File "C:\Path\To\Blender\2.80\blender-2.80.0-git.74db65e5424-windows64\2.80\scripts\startup\bl_ui\space_toolsystem_common.py", line 538, in draw
    self.draw_cls(self.layout, context)
  File "C:\Path\To\Blender\2.80\blender-2.80.0-git.74db65e5424-windows64\2.80\scripts\startup\bl_ui\space_toolsystem_common.py", line 472, in draw_cls
    ToolSelectPanelHelper._tool_active_from_context(context, space_type),
  File C:\Path\To\Blender\2.80\blender-2.80.0-git.74db65e5424-windows64\2.80\scripts\startup\bl_ui\space_toolsystem_common.py", line 293, in _tool_active_from_context
    tool = context.workspace.tools.from_space_image_mode(mode, create=create)
TypeError: wmTools.from_space_image_mode(): error with argument 1, "mode" -  enum "PAINT" not found in ('VIEW', 'UV')

location: <unknown location>:-1


It also continually pops-up and closes if the user tries to split the window views within the Texture Paint Workspace causing issues with navigating Blender.

An additional error can be seen in this screenshot, that is not output to the info panel (...line 2335, in execute...).

2018-12-06_23h08_25.png

Exact steps for others to reproduce the error
Open the default Blender scene, navigate to the "Texture Paint" Workspace along the top bar.

**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX 1070 **Blender Version** Broken: 2.80-beta, 74db65e5424 Worked: 2.80-beta, 925380050d0 **Short description of error** Upon changing to the "Texture Paint" Workspace, the following traceback error message pops-up. ``` Traceback (most recent call last): File "C:\Path\To\Blender\2.80\blender-2.80.0-git.74db65e5424-windows64\2.80\scripts\startup\bl_ui\space_toolsystem_common.py", line 538, in draw self.draw_cls(self.layout, context) File "C:\Path\To\Blender\2.80\blender-2.80.0-git.74db65e5424-windows64\2.80\scripts\startup\bl_ui\space_toolsystem_common.py", line 472, in draw_cls ToolSelectPanelHelper._tool_active_from_context(context, space_type), File C:\Path\To\Blender\2.80\blender-2.80.0-git.74db65e5424-windows64\2.80\scripts\startup\bl_ui\space_toolsystem_common.py", line 293, in _tool_active_from_context tool = context.workspace.tools.from_space_image_mode(mode, create=create) TypeError: wmTools.from_space_image_mode(): error with argument 1, "mode" - enum "PAINT" not found in ('VIEW', 'UV') location: <unknown location>:-1 ``` It also continually pops-up and closes if the user tries to split the window views within the Texture Paint Workspace causing issues with navigating Blender. An additional error can be seen in this screenshot, that is not output to the info panel (...`line 2335, in execute`...). ![2018-12-06_23h08_25.png](https://archive.blender.org/developer/F5861949/2018-12-06_23h08_25.png) **Exact steps for others to reproduce the error** Open the default Blender scene, navigate to the "Texture Paint" Workspace along the top bar.
Author

Added subscriber: @Hexbob6

Added subscriber: @Hexbob6

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Confirmed.

Confirmed.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-07 11:04:49 +01:00
Member

Checking...

Checking...

This issue was referenced by c1f6ecdfab

This issue was referenced by c1f6ecdfabfbfbe3fe4207722589e02953df736e
Philipp Oeser removed their assignment 2018-12-07 11:29:28 +01:00
Campbell Barton was assigned by Philipp Oeser 2018-12-07 11:29:28 +01:00
Member

caused by splitting of Image Editor UV Editor (5c8f1053b5 et al), I think D4044 fixes it

caused by splitting of Image Editor UV Editor (5c8f1053b5 et al), I think [D4044](https://archive.blender.org/developer/D4044) fixes it
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58902
No description provided.