Fix T58902: error getting tools for Image Editor (modes Paint and Mask)

Maniphest Tasks: T58902

Differential Revision: https://developer.blender.org/D4044